--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,9 @@
-@import "grid.css";
+@import "question-grid.css";
+@import "question-style.css";
 @import "style.css";
+@import "grid.css";
+@import "menunew.css";
+@import "menu.css";
 
 @tailwind base;
 @tailwind components;
