--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,6 +5,8 @@
 @import "menunew.css";
 @import "menu.css";
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+/*@tailwind base;*/
+/*@tailwind components;*/
+/*@tailwind utilities;*/
+
+
