--- a/resources/css/grid.css
+++ b/resources/css/grid.css
@@ -165,6 +165,10 @@
     flex: 0 0 auto;
     width: 41.333333337%;
   }
+  .col-lg-6 {
+    flex: 0 0 auto;
+    width: 50%;
+  }
   .col-lg-7 {
     flex: 0 0 auto;
     width: 58.66666667%;
