--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -98,7 +98,7 @@ input[type="radio"]:checked + label {
 .question-image img {
     width: 100%;
     max-width: 1240px;
-    height: 340px;
+    max-height: 200px;
     object-fit: contain;
     object-position: center;
     border-radius: 20px;
